128px logo, fix header layout using visibility hidden on title

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,19 +1,11 @@
 .md-header__button.md-logo img {
-  height: 80px;
+  height: 128px;
 }
 
 .md-header__title {
-  display: none;
-}
-
-.md-header__inner {
-  display: flex;
-  align-items: center;
-}
-
-.md-header__source,
-.md-header__button[for="__search"] {
-  margin-left: auto;
+  flex: 1;
+  visibility: hidden;
+  overflow: hidden;
 }
 
 .md-footer {
